--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "svelte-check": "^4.1.1",
     "typescript": "~5.6.2",
     "vite": "^6.0.5"
+  },
+  "dependencies": {
+    "@types/three": "^0.171.0",
+    "three": "^0.172.0"
   }
 }
